--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
 body {
     background-color: cornflowerblue;
+    margin: 0px;
 }
 
-
+.img {
+height: 140px;
+width: auto;
+float: center;
+margin: 0px;
+padding: 0px;
+}
 header {
-font-size: 40px;
 text-align: center;
 color: blanchedalmond;
+margin: 0px;
+padding: 0px;
+height: 120px;
 }
 
 .spacefiller {
@@ -102,7 +111,7 @@ main {
  {
    display: block;
    position: fixed;
-   top: 84px;
+   top: 150px;
    left: 20px;
    
    z-index: 1;
@@ -116,7 +125,7 @@ main {
    text-decoration: none;
    color: #232323;
    
-   transition: color 0.3s ease;
+   transition: color 0s ease;
  }
  
  #menuToggle a:hover
@@ -157,9 +166,9 @@ main {
    
    transform-origin: 4px 0px;
    
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               opacity 0.55s ease;
+   transition: transform 0s cubic-bezier(0.77,0.2,0.05,1.0),
+               background 0s cubic-bezier(0.77,0.2,0.05,1.0),
+               opacity 0s ease;
  }
  
  #menuToggle span:first-child
@@ -205,7 +214,7 @@ main {
    transform-origin: 0% 0%;
    transform: translate(-100%, 0);
    
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+   transition: transform 0s cubic-bezier(0.77,0.2,0.05,1.0);
  }
  
  #menu li
@@ -219,3 +228,9 @@ main {
  {
    transform: none;
  }
+
+iframe 
+{
+  justify-content: center;
+
+}
