--- a/style.css
+++ b/style.css
@@ -61,14 +61,18 @@ section  {
  
   margin-left: auto;
   margin-right: auto;
-  padding: 40px 20px;
+ 
   
   width: 700px;
-  height: 300px;
-  box-shadow: 5px 10px #000000;
-
+  height: 300px; 
+  border: 20px;
 }
 
+
+section.inset {
+  border-style: inset;
+  border-color: rgb(17, 85, 187);
+}
 article  {
     text-align: center;
     color:white;
@@ -229,8 +233,3 @@ main {
    transform: none;
  }
 
-iframe 
-{
-  margin-right: auto;
-  margin-left: auto;
-}
