--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ ul {
 
 .navbar a {
     float: right;
-    color: blanchedalmond;
+    color: #ffebcd;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -43,7 +43,7 @@ ul {
 }
 
 .navbar a:hover {
-    background-color: burlywood;
+    background-color: rgb(222, 184, 135);
     color:  rgb(72, 96, 146);
 }
 
@@ -64,7 +64,7 @@ section  {
  
   
   width: 700px;
-  height: 300px; 
+  height: 525px; 
   border: 20px;
 }
 
@@ -75,15 +75,17 @@ section.inset {
 }
 article  {
     text-align: center;
-    color:white;
+    
     margin-left: auto;
-    margin-right: auto;
-    padding: 40px 20px;
-    background-color: green;
+    margin-right: auto;   
+    background-color:#ffebcd;
     width:700px;
-    height: 300px;
-    box-shadow: 5px 10px #000000;
-
+    height: 220px;
+    border: 20px;
+}
+article.inset {
+  border-style: inset;
+  border-color: rgb(17, 85, 187);
 }
 .left {
     float: left;
