--- a/tops.css
+++ b/tops.css
@@ -56,31 +56,33 @@ ul {
     color:  blue;
 }
 
-section  {
-  text-align: center;
- 
-  margin-left: auto;
-  margin-right: auto;
-  padding: 40px 20px;
-  
-  width: 700px;
-  height: 300px;
-  box-shadow: 5px 10px #000000;
+p {
+
 
 }
 
 article  {
-    text-align: center;
-    color:white;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 40px 20px;
-    background-color: green;
-    width:700px;
-    height: 300px;
-    box-shadow: 5px 10px #000000;
-
+  text-align: center;
+  
+  margin-left: auto;
+  margin-right: auto;   
+  background-color:#ffebcd;
+  width:700px;
+  height: 220px;
+  border: 20px;
 }
+article.inset {
+border-style: inset;
+border-color: rgb(17, 85, 187);
+}
+p {
+float: left;
+margin: 0%;
+padding: 0px;
+width: 220px;
+height: auto;
+}
+
 .left {
     float: left;
 
