--- a/style.css
+++ b/style.css
@@ -126,24 +126,19 @@ main {
    position: fixed;
    top: 150px;
    left: 20px;
-   
    z-index: 1;
-   
-   -webkit-user-select: none;
-   user-select: none;
  }
  
  #menuToggle a
  {
    text-decoration: none;
    color: #232323;
-   
-   transition: color 0s ease;
+  
  }
  
  #menuToggle a:hover
  {
-   color: tomato;
+   color: #ffebcd;
  }
  
  
@@ -155,13 +150,10 @@ main {
    position: absolute;
    top: -7px;
    left: -5px;
-   
    cursor: pointer;
-   
    opacity: 0; 
    z-index: 2; 
    
-   -webkit-touch-callout: none;
  }
  
  #menuToggle span
@@ -171,45 +163,8 @@ main {
    height: 4px;
    margin-bottom: 5px;
    position: relative;
-   
    background: #e6d0a2;
    border-radius: 3px;
-   
-   z-index: 1;
-   
-   transform-origin: 4px 0px;
-   
-   transition: transform 0s cubic-bezier(0.77,0.2,0.05,1.0),
-               background 0s cubic-bezier(0.77,0.2,0.05,1.0),
-               opacity 0s ease;
- }
- 
- #menuToggle span:first-child
- {
-   transform-origin: 0% 0%;
- }
- 
- #menuToggle span:nth-last-child(2)
- {
-   transform-origin: 0% 100%;
- }
- 
- #menuToggle input:checked ~ span
- {
-   opacity: 1;
-   transform: rotate(45deg) translate(-2px, -1px);
-   background: #ecd4a1;
- }
- 
- #menuToggle input:checked ~ span:nth-last-child(3)
- {
-   opacity: 0;
-   transform: rotate(0deg) scale(0.2, 0.2);
- }
- 
- #menuToggle input:checked ~ span:nth-last-child(2)
- {
-   transform: rotate(-45deg) translate(0, -1px);
  }
 
  #menu
@@ -219,15 +174,12 @@ main {
    margin: -100px 0 0 -50px;
    padding: 50px;
    padding-top: 125px;
-   
    background: #aadfda;
    list-style-type: none;
    -webkit-font-smoothing: antialiased;
-  
    transform-origin: 0% 0%;
    transform: translate(-100%, 0);
-   
-   transition: transform 0s cubic-bezier(0.77,0.2,0.05,1.0);
+   transition: transform;
  }
  
  #menu li
@@ -241,6 +193,7 @@ main {
  {
    transform: none;
  }
+
 
   .footer{
   background:#000;
