--- a/shopall.css
+++ b/shopall.css
@@ -1,6 +1,6 @@
 body {
-    background-color: cornflowerblue;
-    margin: 0px;
+  background-color: cornflowerblue;
+  margin: 0px;
 }
 
 .img {
@@ -19,87 +19,91 @@ height: 120px;
 }
 
 .spacefiller {
-    height: 80px;
-    background-color: cornflowerblue;
+  height: 80px;
+  background-color: cornflowerblue;
 }
 ul {
-    padding:0px;
+  padding:0px;
 }
 .navbar {
-    overflow: hidden;
-    background-color: rgb(72, 96, 146);
-    position: fixed;
-    width: 100%;
+  overflow: hidden;
+  background-color: rgb(72, 96, 146);
+  position: fixed;
+  width: 100%;
 }
 
 .navbar a {
-    float: right;
-    color: blanchedalmond;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    
+  float: right;
+  color: blanchedalmond;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  
 }
 
 .navbar a:hover {
-    background-color: burlywood;
-    color:  rgb(72, 96, 146);
+  background-color: burlywood;
+  color:  rgb(72, 96, 146);
 }
 
 .navbar a:visited {
-  color: #000000;
+color: #000000;
 }
 
 .navbar a.home {
-    background-color: beige;
-    color:  blue;
+  background-color: beige;
+  color:  blue;
 }
 
-section  {
-  text-align: center;
- 
-  margin-left: auto;
-  margin-right: auto;
-  padding: 40px 20px;
-  
-  width: 700px;
-  height: 300px;
-  box-shadow: 5px 10px #000000;
+h1 {
+font-size: 60px;
+color: #ffebcd;
+margin-left: 45%;
 
 }
 
 article  {
-    text-align: center;
-    color:white;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 40px 20px;
-    background-color: green;
-    width:700px;
-    height: 300px;
-    box-shadow: 5px 10px #000000;
+text-align: center;
 
+margin-left: auto;
+margin-right: auto;   
+background-color:#ffebcd;
+width:700px;
+height: 220px;
+border: 20px;
 }
+article.inset {
+border-style: inset;
+border-color: rgb(17, 85, 187);
+}
+p {
+float: left;
+margin: 0%;
+padding: 0px;
+width: 220px;
+height: auto;
+}
+
 .left {
-    float: left;
+  float: left;
 
 }
 aside{
-    text-align: center;
-    color:white;
-    background-color: pink;
-    height: 680px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 40px 20px;
-    width: 900px;
-    box-shadow: 5px 10px #000000;
+  text-align: center;
+  color:white;
+  background-color: pink;
+  height: 680px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 20px;
+  width: 900px;
+  box-shadow: 5px 10px #000000;
 }
 main {
-    width: 940px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
@@ -107,125 +111,76 @@ main {
 
 
 
- #menuToggle
- {
-   display: block;
-   position: fixed;
-   top: 150px;
-   left: 20px;
-   
-   z-index: 1;
-   
-   -webkit-user-select: none;
-   user-select: none;
- }
- 
- #menuToggle a
- {
-   text-decoration: none;
-   color: #232323;
-   
-   transition: color 0s ease;
- }
- 
- #menuToggle a:hover
- {
-   color: tomato;
- }
- 
- 
- #menuToggle input
- {
-   display: block;
-   width: 40px;
-   height: 32px;
-   position: absolute;
-   top: -7px;
-   left: -5px;
-   
-   cursor: pointer;
-   
-   opacity: 0; 
-   z-index: 2; 
-   
-   -webkit-touch-callout: none;
- }
- 
- #menuToggle span
- {
-   display: block;
-   width: 33px;
-   height: 4px;
-   margin-bottom: 5px;
-   position: relative;
-   
-   background: #e6d0a2;
-   border-radius: 3px;
-   
-   z-index: 1;
-   
-   transform-origin: 4px 0px;
-   
-   transition: transform 0s cubic-bezier(0.77,0.2,0.05,1.0),
-               background 0s cubic-bezier(0.77,0.2,0.05,1.0),
-               opacity 0s ease;
- }
- 
- #menuToggle span:first-child
- {
-   transform-origin: 0% 0%;
- }
- 
- #menuToggle span:nth-last-child(2)
- {
-   transform-origin: 0% 100%;
- }
- 
- #menuToggle input:checked ~ span
- {
-   opacity: 1;
-   transform: rotate(45deg) translate(-2px, -1px);
-   background: #ecd4a1;
- }
- 
- #menuToggle input:checked ~ span:nth-last-child(3)
- {
-   opacity: 0;
-   transform: rotate(0deg) scale(0.2, 0.2);
- }
- 
- #menuToggle input:checked ~ span:nth-last-child(2)
- {
-   transform: rotate(-45deg) translate(0, -1px);
- }
+#menuToggle
+{
+display: block;
+position: fixed;
+top: 150px;
+left: 20px;
+z-index: 1;
+}
 
- #menu
- {
-   position: absolute;
-   width: 300px;
-   margin: -100px 0 0 -50px;
-   padding: 50px;
-   padding-top: 125px;
-   
-   background: #aadfda;
-   list-style-type: none;
-   -webkit-font-smoothing: antialiased;
-  
-   transform-origin: 0% 0%;
-   transform: translate(-100%, 0);
-   
-   transition: transform 0s cubic-bezier(0.77,0.2,0.05,1.0);
- }
- 
- #menu li
- {
-   padding: 10px 0;
-   font-size: 22px;
- }
- 
- 
- #menuToggle input:checked ~ ul
- {
-   transform: none;
- }
+#menuToggle a
+{
+text-decoration: none;
+color: #232323;
 
+}
+
+#menuToggle a:hover
+{
+color: #ffebcd;
+}
+
+
+#menuToggle input
+{
+display: block;
+width: 40px;
+height: 32px;
+position: absolute;
+top: -7px;
+left: -5px;
+cursor: pointer;
+opacity: 0; 
+z-index: 2; 
+
+}
+
+#menuToggle span
+{
+display: block;
+width: 33px;
+height: 4px;
+margin-bottom: 5px;
+position: relative;
+background: #e6d0a2;
+border-radius: 3px;
+}
+
+#menu
+{
+position: absolute;
+width: 300px;
+margin: -100px 0 0 -50px;
+padding: 50px;
+padding-top: 125px;
+background: #aadfda;
+list-style-type: none;
+-webkit-font-smoothing: antialiased;
+transform-origin: 0% 0%;
+transform: translate(-100%, 0);
+transition: transform;
+}
+
+#menu li
+{
+padding: 10px 0;
+font-size: 22px;
+}
+
+
+#menuToggle input:checked ~ ul
+{
+transform: none;
+}
