--- a/aboutfinal.css
+++ b/aboutfinal.css
@@ -69,42 +69,20 @@ border: 100px #ecd4a1;
 
 }
 
-article  {
+section  {
   text-align: center;
-  color:white;
+  
   margin-left: auto;
-  margin-right: auto;
-  padding: 40px 20px;
-  background-color: green;
+  margin-right: auto;   
+  background-color:#ffebcd;
   width:700px;
-  height: 300px;
-  box-shadow: 5px 10px #000000;
-
+  height: 220px;
+  border: 20px;
 }
-.left {
-  float: left;
-
+section.inset {
+border-style: inset;
+border-color: rgb(17, 85, 187);
 }
-aside{
-  text-align: center;
-  color:white;
-  background-color: pink;
-  height: 680px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 40px 20px;
-  width: 900px;
-  box-shadow: 5px 10px #000000;
-}
-main {
-  width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-
-}
-
-
-
 
 #menuToggle
  {
