--- a/Products.css
+++ b/Products.css
@@ -58,29 +58,19 @@ ul {
 
 section  {
   text-align: center;
- 
-  margin-left: auto;
-  margin-right: auto;
-  padding: 40px 20px;
   
-  width: 700px;
-  height: 300px;
-  box-shadow: 5px 10px #000000;
-
+  margin-left: auto;
+  margin-right: auto;   
+  background-color:#ffebcd;
+  width:700px;
+  height: 220px;
+  border: 20px;
+}
+section.inset {
+border-style: inset;
+border-color: rgb(17, 85, 187);
 }
 
-article  {
-    text-align: center;
-    color:white;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 40px 20px;
-    background-color: green;
-    width:700px;
-    height: 300px;
-    box-shadow: 5px 10px #000000;
-
-}
 
 #menuToggle
  {
