--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: cornflowerblue;
+    background-color: rgb(100, 148, 237);
     margin: 0px;
 }
 
@@ -34,7 +34,7 @@ ul {
 
 .navbar a {
     float: right;
-    color: blanchedalmond;
+    color: #ffebcd;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -43,7 +43,7 @@ ul {
 }
 
 .navbar a:hover {
-    background-color: burlywood;
+    background-color: rgb(222, 184, 135);
     color:  rgb(72, 96, 146);
 }
 
@@ -61,29 +61,43 @@ section  {
  
   margin-left: auto;
   margin-right: auto;
-  padding: 40px 20px;
+ 
   
   width: 700px;
-  height: 300px;
-  box-shadow: 5px 10px #000000;
-
+  height: 525px; 
+  border: 20px;
 }
 
+
+section.inset {
+  border-style: inset;
+  border-color: #1155bb;
+}
 article  {
     text-align: center;
-    color:white;
+    
     margin-left: auto;
-    margin-right: auto;
-    padding: 40px 20px;
-    background-color: green;
+    margin-right: auto;   
+    background-color:#ffebcd;
     width:700px;
-    height: 300px;
-    box-shadow: 5px 10px #000000;
-
+    height: 220px;
+    border: 20px;
+}
+article.inset {
+  border-style: inset;
+  border-color: rgb(17, 85, 187);
+}
+p {
+float: left;
+margin: 0%;
+padding: 0px;
+width: 220px;
+height: auto;
 }
 
 
-#menuToggle
+
+ #menuToggle
  {
    display: block;
    position: fixed;
@@ -156,3 +170,58 @@ article  {
  {
    transform: none;
  }
+
+
+  .footer{
+  background:#000;
+  padding:30px 0px;
+  font-family: 'Play', sans-serif;
+  text-align:center;
+  }
+  
+  .footer .row{
+  width:100%;
+  margin:1% 0%;
+  padding:0.6% 0%;
+  color:gray;
+  font-size:0.8em;
+  }
+  
+  .footer .row a{
+  text-decoration:none;
+  color:gray;
+  transition:0.5s;
+  }
+  
+  .footer .row a:hover{
+  color:#fff;
+  }
+  
+  .footer .row ul{
+  width:100%;
+  }
+  
+  .footer .row ul li{
+  display:inline-block;
+  margin:0px 30px;
+  }
+  
+  .footer .row a i{
+  font-size:2em;
+  margin:0% 1%;
+  }
+  
+  @media (max-width:720px){
+  .footer{
+  text-align:left;
+  padding:5%;
+  }
+  .footer .row ul li{
+  display:block;
+  margin:10px 0px;
+  text-align:left;
+  }
+  .footer .row a i{
+  margin:0% 3%;
+  }
+  }
